# dsmr-reader

./: .codecov.yml  .coveragerc  .env.example  .env.template  .flake8  .gitignore  .hgignore  .prospector.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  BC-ROADMAP.md  CHANGELOG  CONTRIBUTING.md  FUNDING.yml  LICENCE  LICENCE.txt  LICENSE.md  README.md  RELEASE  SUPPORT.md  changelog.rst  check_python_version.py  codeql-config.yml  deploy.sh  manage.py  outdated.txt  post-deploy.sh  pre-deploy.sh  pylama.ini  pyproject.toml  quick-test.sh  reload.sh  reqs.txt  requirements.txt  setup.cfg  supervisor-dsmr-poller.conf  test-all.sh  upgrade.sh
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  feature.md  feature.yml  help.md  help.yml  question.yml  report.md
.github/workflows/: automated-tests.yml  codeql.yml  dependency-update-check.yml  main.yml  poetry-requirements.yml
.run/: Docker__Flake8.xml  Docker__Manage_py.xml
backups/archive/: README.txt
circleci/: config.yml
docs/: CREDITS  HOWTO  HOWTO.md  INSTALL  Makefile  Python3 Virtualenv.txt  api.rst  application.rst  archive.rst  changelog.rst  compare.rst  conf.py  configuration.rst  contributing.rst  credits.rst  dashboard.rst  data_integrity.rst  development.rst  donations.rst  dropbox.rst  energy_contracts.rst  env_settings.rst  faq.rst  features.rst  help.rst  home_assistant.rst  index.rst  installation.rst  installation_docker.rst  installation_extended.rst  installation_quick.rst  intro.rst  licence.rst  make.bat  mindergas.rst  mqtt.rst  notifications.rst  plugins.rst  pvoutput.rst  requirements.rst  (+8 more)
docs/admin/: api.rst  backup_dropbox.rst  consumption.rst  datalogger.rst  email.rst  email_backup.rst  interface.rst  mindergas.rst  mqtt.rst  notifications.rst  pvoutput.rst  weather.rst
docs/explained/: about.rst  hall-of-fame.rst  index.rst
docs/explanation/: about.rst  hall-of-fame.rst  index.rst
docs/faq/: data_throughput.rst  database.rst  downgrade.rst  restart_processes.rst  uninstall.rst  update.rst  v3_upgrade.rst  v4_upgrade.rst
docs/frontend/: archive.rst  compare.rst  configuration.rst  dashboard.rst  energy_contracts.rst  export.rst  statistics.rst  status.rst  trends.rst
docs/how-to/: api.rst  development.rst  index.rst
docs/installation/: datalogger.rst  docker.rst  explained.rst  quick.rst  restore.rst
docs/reference/: api.rst  changelog.rst  env-settings.rst  faq.rst  index.rst  plugins.rst
dsmr_api/: admin.py  apps.py  authentication.py  filters.py  forms.py  models.py  schemas.py  urls.py  views.py
dsmr_backend/: admin.py  apps.py  backend_runner.py  backend_standalone.py  dto.py  exceptions.py  mixins.py  models.py  services.py  signals.py
dsmr_backup/: admin.py  apps.py  forms.py
dsmr_client/: admin.py  apps.py  models.py
dsmr_consumption/: admin.py  apps.py  exceptions.py  forms.py  services.py  signals.py
dsmr_datalogger/: admin.py  apps.py  dsmr.py  dto.py  exceptions.py  mapping.py  services.py  signals.py
dsmr_dropbox/: apps.py  services.py  urls.py  views.py
dsmr_frontend/: admin.py  apps.py  forms.py  mixins.py  services.py  urls.py  views.py
dsmr_influxdb/: admin.py  apps.py  models.py  services.py
dsmr_mindergas/: admin.py  apps.py  services.py
dsmr_mqtt/: admin.py  apps.py  services.py
dsmr_notification/: admin.py  apps.py  services.py  signals.py  views.py
dsmr_parser/: LICENSE  README  exceptions.py  obis_name_mapping.py  obis_references.py  objects.py  parsers.py  profile_generic_specifications.py  telegram_specifications.py  value_types.py
dsmr_plugins/: apps.py
dsmr_pvoutput/: admin.py  apps.py  services.py  signals.py
dsmr_stats/: __init__.py  admin.py  apps.py  mixins.py  models.py  services.py  tests.py  urls.py  views.py
dsmr_weather/: admin.py  apps.py  buienradar.py  services.py  tests.py
dsmrreader/: __init__.py  settings.py  settings_test.py  signals.py  urls.py  wsgi.py
logs/: .dummy
nginx/: dsmr-webinterface
postgresql/: backup.sh
requirements/: base.txt  postgresql.txt  requirements-mysql.txt
supervisor/: dsmr-poller.conf  dsmr_stats_compactor.conf  dsmr_stats_datalogger.conf  dsmr_stats_poller.conf  dsmr_webinterface.conf
tools/: apply-autopep8.sh  check-requirements-updates.sh  check-translations.sh  clear-po-headers.sh  clear-translation-files-headers.sh  generate-secret-key.sh  install.sh  quick-test.sh  regenerate-translation-mo-files.sh  test-all.sh  test-mysql.sh  test-postgresql.sh  test-sqlite.sh
(+1408 files in other folders)
