[tool.poetry]
name = "DSMR-reader"
version = "v5"
description = "DSMR-protocol reader, P1 telegram data storage and energy consumption visualizer"
license = "Creative Commons Attribution-NonCommercial 4.0 International Public License"
readme = 'README.md'
repository = "https://github.com/dsmrreader/dsmr-reader"
homepage = "https://dsmr-reader.readthedocs.io/"
authors = [
    "Dennis Siemensma",
    "https://github.com/dsmrreader/dsmr-reader/graphs/contributors"
]


[tool.poetry.dependencies]
python = "^3.7"

coreapi = "^2.0"
crcmod = "^1.0"
django = "^3.2"
django-admin-rangefilter = "^0.8"
django-admin-sortable = "^2.0"
django-colorfield = "^0.7"
django-debug-toolbar = "^3.0"
django-filter = "^21.0"
django-mathfilters = "^1.0"
djangorestframework = "^3.0"
django-solo = "^2.0"
dropbox = "^11.0"
gunicorn = "^20.1"
influxdb-client = "^1.0"
paho-mqtt = "^1.0"
psycopg2-binary = "^2.0"
pyserial = "^3.0"
pyserial-asyncio = "^0.6"
python-dateutil = "^2.0"
python-decouple = "^3.0"
pytz = "^2023.0"
pyyaml = "^6.0"
requests = "^2.0"
urllib3 = "^1.0"
attrs = "^22.0"
deprecated = "^1.0"


[tool.poetry.dev-dependencies]
flake8 = "^5.0"
flake8-bandit = "^4.0"
flake8-black = "^0.3"
flake8-bugbear = "^23.0"
polib = "^1.2"
pytest-cov = "^4.0"
pytest-django = "^4.0"
pytest-xdist = "^3.0"
mysqlclient = "^2.0"
safety = "^2.0"
sphinx = "^4.0"
sphinx-autobuild = "^2021.0"
sphinx-intl = "^2.0"
sphinx-rtd-theme = "^1.0"
mypy = "^1.0"
types-pytz = "^2023.0"
types-requests = "^2.0"
types-python-dateutil = "^2.0"
types-polib = "^1.0"
types-six = "^1.0"
